@@ -2549,6 +2549,34 @@ attr(,"type")
 > 
 > 
 > cleanEx()
+> nameEx("evenlySampled")
+> ### * evenlySampled
+> 
+> flush(stderr()); flush(stdout())
+> 
+> ### Name: evenSample
+> ### Title: Number of samples per gradient segments
+> ### Aliases: evenSample
+> ### Keywords: utilities
+> 
+> ### ** Examples
+> 
+> data(SumSST)
+> evenSample(SumSST) ## not an even sample...
+ (1.97,4.7]   (4.7,7.4]  (7.4,10.1] (10.1,12.8] (12.8,15.5] (15.5,18.2] 
+          1           4           1           3           5           3 
+(18.2,20.9] (20.9,23.6] (23.6,26.3]   (26.3,29] 
+          3           6          17          18 
+attr(,"gradient")
+[1] "SumSST"
+attr(,"numSegments")
+[1] 10
+attr(,"class")
+[1] "evenSample"
+> 
+> 
+> 
+> cleanEx()
 > nameEx("fuse")
 > ### * fuse
 > 
@@ -7480,7 +7508,7 @@ Correlation         : 0.437 (p = < 2.22e-16)
 > ###
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  23.609 0.165 24.038 0 0.003 
+Time elapsed:  22.28 0.173 22.714 0 0.003 
 > grDevices::dev.off()
 null device 
           1 
